--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ p { color: rgb(70,70,70); }
   position: relative;
   width: min(720px, 100%);
   height: 240px;
-  margin: 0.1rem auto 0;
+  margin: 0.1rem 0 0 auto;   /* ✅ pushes the tree to the right */
   max-width: 100%;
 }
 
@@ -320,6 +320,7 @@ p { color: rgb(70,70,70); }
   color:#444;
   margin-bottom: 0.03rem;
   line-height: 1.25;
+
 }
 
 .edu-detail{
